# abont

./: Cargo.toml  README.md
proto/: Cargo.toml  README.md
proto/abont/: Cargo.toml
proto/abont-api/: Cargo.toml
proto/abont-api/src/: atext.rs  lib.rs
proto/abont-egui/: Cargo.toml
proto/abont-egui/src/: lib.rs
proto/abont-shell/: Cargo.toml
proto/abont-shell/src/: lib.rs
proto/abont/src/: main.rs
src/: main.rs
