[package]
name = "abont"
version = "0.0.0"
edition = "2021"

[dependencies]
abont-api = { version = "0.0.0", path = "../abont-api" }
abont-egui = { version = "0.0.0", path = "../abont-egui" }
abont-shell = { version = "0.0.0", path = "../abont-shell" }
tokio = { version = "1.40.0", features =  ["rt"]}
